--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "nodemon src/server.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
