--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "start": "nodemon src/server.js"
+    "start": "node src/server.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
