--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon",
     "start": "node src/server.js"
   },
+  "type": "module",
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.5",
